<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>wtf.choco</groupId>
  <artifactId>Alchema</artifactId>
  <version>1.2.1-SNAPSHOT</version>

  <name>Alchema</name>
  <description>In-world cauldron crafting, witchcraft and sorcery</description>

  <distributionManagement>
    <repository>
      <id>md_5-releases</id>
      <url>https://repo.md-5.net/content/repositories/releases/</url>
    </repository>
    <snapshotRepository>
      <id>md_5-snapshots</id>
      <url>https://repo.md-5.net/content/repositories/snapshots/</url>
    </snapshotRepository>
  </distributionManagement>

  <build>
    <resources>
      <resource>
        <directory>src/main/resources</directory>
        <filtering>true</filtering>
      </resource>
    </resources>

    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.10.1</version>
        <configuration>
          <source>16</source>
          <target>16</target>
          <encoding>UTF-8</encoding>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-shade-plugin</artifactId>
        <version>3.3.0</version>
        <executions>
          <execution>
            <phase>package</phase>
            <goals>
              <goal>shade</goal>
            </goals>
            <configuration>
              <createDependencyReducedPom>false</createDependencyReducedPom>
            </configuration>
          </execution>
        </executions>
        <configuration>
          <relocations>
            <relocation>
              <pattern>org.bstats</pattern>
              <shadedPattern>wtf.choco.alchema.metrics</shadedPattern>
            </relocation>
            <relocation>
              <pattern>wtf.choco.commons</pattern>
              <shadedPattern>wtf.choco.alchema.commons</shadedPattern>
            </relocation>
          </relocations>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>3.0.0-M6</version>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-checkstyle-plugin</artifactId>
        <version>3.1.2</version>
        <executions>
          <execution>
            <phase>process-classes</phase>
            <goals>
              <goal>check</goal>
            </goals>
          </execution>
        </executions>
        <configuration>
          <configLocation>checkstyle.xml</configLocation>
          <encoding>UTF-8</encoding>
          <consoleOutput>true</consoleOutput>
        </configuration>
        <dependencies>
          <dependency>
            <groupId>com.puppycrawl.tools</groupId>
            <artifactId>checkstyle</artifactId>
            <version>10.1</version>
          </dependency>
        </dependencies>
      </plugin>
    </plugins>
  </build>

  <repositories>
    <repository>
      <id>spigot-repo</id>
      <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
    </repository>
    <repository>
      <id>bstats-repo</id>
      <url>https://repo.codemc.org/repository/maven-public</url>
    </repository>
    <repository>
      <id>jitpack</id>
      <url>https://jitpack.io/</url>
    </repository>

    <!-- MMOItems -->
    <repository>
      <id>zz_lumine-repo</id>
      <url>https://mvn.lumine.io/repository/maven-public/</url>
    </repository>
  </repositories>

  <dependencies>
    <dependency>
      <groupId>org.spigotmc</groupId>
      <artifactId>spigot-api</artifactId>
      <version>1.18.2-R0.1-SNAPSHOT</version>
      <scope>provided</scope>
    </dependency>

    <dependency>
      <groupId>org.jetbrains</groupId>
      <artifactId>annotations</artifactId>
      <version>23.0.0</version>
      <scope>provided</scope>
    </dependency>

    <dependency>
      <groupId>org.bstats</groupId>
      <artifactId>bstats-bukkit</artifactId>
      <version>3.0.0</version>
      <scope>compile</scope>
    </dependency>

    <dependency>
      <groupId>com.github.2008Choco</groupId>
      <artifactId>ChocoCommons</artifactId>
      <version>5fab5b2561</version>
      <scope>compile</scope>
    </dependency>

    <!-- Integration dependencies -->
    <dependency>
      <groupId>io.lumine</groupId>
      <artifactId>MythicLib</artifactId>
      <version>1.0.6</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>net.Indyuce</groupId>
      <artifactId>MMOItems</artifactId>
      <version>6.5.4</version>
      <scope>provided</scope>
    </dependency>

    <!-- Testing dependencies -->
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-api</artifactId>
      <version>5.8.2</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.ow2.asm</groupId>
      <artifactId>asm-tree</artifactId>
      <version>9.3</version>
      <scope>test</scope>
    </dependency>
  </dependencies>
</project>
